# investrss

./: Makefile  README.md  app.py  deps.py  get_deli.py  get_instrument.py  get_portfolio.py  get_telegram_chat_id.py  instruments_available.py  invest_settings.py  news.py  portfolio_informer.py  pyproject.toml  rss.py  server.py  telegram_notifier.py  telegram_notifier_settings.py
gpt/: api.py
invest/: invest_settings.py  portfolio_informer.py
invest/marketdata/: notifier.py  settings.py  sniffer.py
invest/marketdata/share_info/: container.py  statist.py  statist_factory.py
m5stick/: __init__.py  settings.py  voice_bot_firmware.py
marketdata/: settings.py  sniffer.py
marketdata/share_info/: container.py  info.py  statist.py  statist_factory.py
rss/: rss.py
scripts/: get_instrument.py  get_market_data.py  get_portfolio.py  get_telegram_chat_id.py
smalltv/: plot.py  random_image.py
static/: list.html  path.py
telegram/: notifier.py
telegram_notifier/: notifier.py  notifier_settings.py
