[tool.poetry]
name = "investrss"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinkoff-investments = "^0.2.0b66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
