[tool.poetry]
name = "investrss"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
tinkoff-investments = "0.2.0b96"
rfeed = "^1.1.1"
fastapi = "^0.109.2"
punq = "^0.7.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
